--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       - "5000:5000"
     depends_on:
       - mysql_db
+    environment:
+      - MYSQL_HOST=mysql_db  # This should match the mysql_db service name
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=password
+      - MYSQL_DB=flask_db
 
   mysql_db:
     image: mysql:latest
@@ -15,3 +20,7 @@ services:
       MYSQL_DATABASE: flask_db
     ports:
       - "3306:3306"
+
+networks:
+  default:
+    driver: bridge
